# ServerlessCraft

./: .gitignore  app.py  params.py  pyproject.toml  server_startup.py  template.yaml  update_slash_commands.py  zappa_settings.json.tpl
.github/workflows/: deploy.yml
app/: app.py  params.py  server_startup.py
