[tool.poetry]
name = "discord-scratch"
version = "0.1.0"
description = ""
authors = ["Aaron Dunmore <aedunmore@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.4"
Flask = "^2.0.1"
mypy = "^0.812"
pylint = "^2.8.2"
Flask-Discord-Interactions = "^0.1.9"
apig-wsgi = "^2.11.0"
boto3 = "^1.17.93"
Quart = "^0.15.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
